Updated Exercise for eg 1 & 2
completed eg 1 & 2 but I can't visually see if my answers worked.

--- a/Exercises_1.ipynb
+++ b/Exercises_1.ipynb
@@ -71,7 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "sales['Customer_Age'].mean{}"
    ]
   },
   {
@@ -107,7 +108,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "sales['Customer_Age'].plot(kind='kde', figsize=(15,7)"
    ]
   },
   {
@@ -127,7 +129,18 @@
    "metadata": {
     "cell_type": "solution"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 2.7.16 64-bit' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: '/usr/bin/python -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "sales['Customer_Age'].plot(kind='box', vert=False, figsize=(14,6))"
    ]
@@ -1299,7 +1312,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2.7.16 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1313,7 +1326,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "2.7.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
+   }
   }
  },
  "nbformat": 4,
