Answered extra question
Answered some extra lines

--- a/Exercises_1.ipynb
+++ b/Exercises_1.ipynb
@@ -160,7 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "sales['Order_Quantity'].mean()"
    ]
   },
   {
@@ -187,7 +188,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "sales['Order_Quantity'].plot(kind='hist', bins=40, figsize=(15,7))\n",
+    "sales['Order_Quantity'].plot(kind='box', vert=False, figsize=(15,7))"
    ]
   },
   {
