--- a/Exercises_1.ipynb
+++ b/Exercises_1.ipynb
@@ -109,7 +109,7 @@
    "outputs": [],
    "source": [
     "# your code goes here\n",
-    "sales['Customer_Age'].plot(kind='kde', figsize=(15,7)"
+    "sales['Customer_Age'].plot(kind='kde', figsize=(15,7))"
    ]
   },
   {
