Updated with new answers
Updated with new answers. Have question about next question

--- a/Exercises_1.ipynb
+++ b/Exercises_1.ipynb
@@ -69,10 +69,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 2.7.16 64-bit' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: '/usr/bin/python -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "# your code goes here\n",
-    "sales['Customer_Age'].mean{}"
+    "sales['Customer_Age'].mean()"
    ]
   },
   {
@@ -106,7 +117,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 2.7.16 64-bit' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: '/usr/bin/python -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "# your code goes here\n",
     "sales['Customer_Age'].plot(kind='kde', figsize=(15,7))"
@@ -230,7 +252,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "sales['Year'].value_count()"
    ]
   },
   {
@@ -257,7 +280,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "sales['Year'].value_count().plot(kind='pie', figsize=(7,7))"
    ]
   },
   {
@@ -286,7 +310,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "sales['Month'].value_counts()"
    ]
   },
   {
@@ -313,7 +338,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "sales['Month'].value_counts().plot(kind='bar', figsize= (15,7))"
    ]
   },
   {
@@ -342,7 +368,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "sales['Country'].value_counts()"
    ]
   },
   {
@@ -380,7 +407,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "sales['Country'].value_counts().plot(kind='bar', figsize=(15,7))"
    ]
   },
   {
@@ -409,7 +437,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "sales['Product'].unique()"
    ]
   },
   {
@@ -438,7 +467,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "sales['Product'].value_counts().head(10).plot(kind='bar', figzise=(15,7))"
    ]
   },
   {
@@ -469,7 +499,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "sales.plot(kind='scatter', x='Unit_Cost', y='Unit_Price', figsize=(7,7))"
    ]
   },
   {
@@ -500,7 +531,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "sales.plot(kind=\"scatter\", x='Order_Quantity', y='Profit', figsize=(7,7))"
    ]
   },
   {
@@ -531,7 +563,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "sales[['Profit', 'Country']].boxplot(by='Country', figsize=(15,7))"
    ]
   },
   {
@@ -562,7 +595,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "sales[['Customer_Age', 'Country']].boxplot(by='Country', figsize=(15,7))"
    ]
   },
   {
